--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donverse.net</title>
 
+    <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    <div class="root">
+    <div class="root font-oswald-bold">
         <h1 class="centered">Donverse.net</h1>
     </div>
 </body>
