--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
     <div class="root font-oswald-bold">
         <h1 class="centered">Donverse.net</h1>
     </div>
+    <div class="footer font-oswald-bold">
+        <ul>
+            <li><a href="/docs/default-terms-of-services.html">Default Terms of Services</a></li>
+            <li><a href="/docs/default-community-guidelines.html">Default Community Guidelines</a></li>
+            <li><a href="/docs/default-payment-terms.html">Default Payments Terms</a></li>
+        </ul>
+    </div>
 </body>
 </html>
