--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Donverse.net</title>
 
     <link rel="icon" href="/favicon.ico" id="favicon">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
 
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/index.css">
@@ -15,11 +14,11 @@
     <div class="root font-oswald-bold">
         <h1 class="centered">Donverse.net</h1>
     </div>
-    <div class="footer font-oswald-bold">
+    <div class="footer">
         <ul>
-            <li><a href="/docs/default-terms-of-services.html">Default Terms of Services</a></li>
-            <li><a href="/docs/default-community-guidelines.html">Default Community Guidelines</a></li>
-            <li><a href="/docs/default-payment-terms.html">Default Payments Terms</a></li>
+            <li><a href="/docs/default-terms-of-services.html">Terms of Services</a></li>
+            <li><a href="/docs/default-community-guidelines.html">Community Guidelines</a></li>
+            <li><a href="/docs/default-payment-terms.html">Payments Terms</a></li>
         </ul>
     </div>
 </body>
