Fixed footer not displaying correctly and font was too bold and difficult to read.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="root font-oswald-bold">
         <h1 class="centered">Donverse.net</h1>
     </div>
-    <div class="footer">
+    <div class="footer font-oswald-medium">
         <ul>
             <li><a href="/docs/default-terms-of-services.html">Terms of Services</a></li>
             <li><a href="/docs/default-community-guidelines.html">Community Guidelines</a></li>
