--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <div class="footer font-oswald-medium">
         <ul>
-            <li><a href="/docs/default-terms-of-services">Terms of Services</a></li>
-            <li><a href="/docs/default-community-guidelines">Community Guidelines</a></li>
-            <li><a href="/docs/default-payment-terms">Payments Terms</a></li>
+            <li><a href="/docs/terms-of-services">Terms of Services</a></li>
+            <li><a href="/docs/community-guidelines">Community Guidelines</a></li>
+            <li><a href="/docs/payment-terms">Payments Terms</a></li>
         </ul>
     </div>
 </body>
